--- a/index.html
+++ b/index.html
@@ -3,39 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calibrated Pools | Precision Water Chemistry</title>
+    <title>Calibrated Pools | Commercial Water Management</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav>
-        <div class="logo">CALIBRATED POOLS</div>
-        <a href="mailto:joshua@calibratedpools.com" class="nav-btn">CONTACT TECH</a>
+        <div class="logo-container">
+            <img src="logo.png" alt="CALIBRATED POOLS" class="logo-img">
+        </div>
+        <a href="mailto:joshua@calibratedpools.com" class="nav-btn">CONCIERGE CONTACT</a>
     </nav>
 
     <header class="hero">
-        <div class="container">
+        <div class="glass-panel">
             <h1>PRECISION WATER CHEMISTRY.</h1>
-            <p class="subtitle">Commercial LSI Audits & Equipment Calibration.</p>
-            <p class="credentials">CPO Certified | OSHA 10 Safety Certified</p>
+            <p class="subtitle">Commercial LSI Audits & Aesthetic Calibration.</p>
+            
+            <p class="credentials">CPO Certified | Certification No. C-161853</p>
+            
             <div class="cta-group">
-                <a href="mailto:joshua@calibratedpools.com" class="btn primary-btn">REQUEST AUDIT</a>
+                <a href="mailto:joshua@calibratedpools.com" class="btn primary-btn">REQUEST CONSULTATION</a>
             </div>
         </div>
     </header>
 
     <section class="services">
         <div class="container">
-            <h2>OPERATIONAL STANDARDS</h2>
+            <h2>OPERATIONAL EXCELLENCE</h2>
             <div class="grid">
                 <div class="card">
                     <h3>LSI BALANCE</h3>
                     <p>We don't just clear water; we balance the Langelier Saturation Index to protect plaster and equipment from corrosion.</p>
-                </div>
-                <div class="card">
-                    <h3>EQUIPMENT REPAIR</h3>
-                    <p>Pumps, filters, heaters, and automation. Diagnosis and repair of commercial and residential systems.</p>
                 </div>
                 <div class="card">
                     <h3>GREEN-TO-CLEAN</h3>
@@ -52,7 +52,7 @@
             <p class="contact-info">
                 <a href="mailto:joshua@calibratedpools.com">joshua@calibratedpools.com</a> 
             </p>
-            <p class="small-text">&copy; 2026 Calibrated Pools. Standards based on PHTA guidelines.</p>
+            <p class="small-text">&copy; 2026 Calibrated Pools. PHTA Standards Compliant.</p>
         </div>
     </footer>
 
