--- a/index.html
+++ b/index.html
@@ -3,44 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calibrated Pools | Commercial Water Management</title>
+    <title>Calibrated Pools | Precision Water Chemistry</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav>
-        <div class="logo-container">
-            <img src="logo.png" alt="CALIBRATED POOLS" class="logo-img">
+        <div class="logo-text">
+            CALIBRATED <span class="silver-text">POOLS</span>
         </div>
-        <a href="mailto:joshua@calibratedpools.com" class="nav-btn">CONCIERGE CONTACT</a>
+        <a href="mailto:joshua@calibratedpools.com" class="nav-btn">CONTACT TECH</a>
     </nav>
 
     <header class="hero">
         <div class="glass-panel">
-            <h1>PRECISION WATER CHEMISTRY.</h1>
-            <p class="subtitle">Commercial LSI Audits & Aesthetic Calibration.</p>
+            <h1>PRECISION WATER CHEMISTRY</h1>
+            <p class="subtitle">COMMERCIAL LSI AUDITS & CALIBRATION</p>
             
-            <p class="credentials">CPO Certified | Certification No. C-161853</p>
+            <div class="credentials-box">
+                <p>JOSHUA MCKIBBEN | CPO CERTIFIED</p>
+                <p class="cert-number">CERTIFICATION NO: C-161853</p>
+            </div>
             
             <div class="cta-group">
-                <a href="mailto:joshua@calibratedpools.com" class="btn primary-btn">REQUEST CONSULTATION</a>
+                <a href="mailto:joshua@calibratedpools.com" class="btn primary-btn">REQUEST AUDIT</a>
             </div>
         </div>
     </header>
 
-    <section class="services">
+    <section class="chemistry-grid">
         <div class="container">
-            <h2>OPERATIONAL EXCELLENCE</h2>
-            <div class="grid">
-                <div class="card">
-                    <h3>LSI BALANCE</h3>
-                    <p>We don't just clear water; we balance the Langelier Saturation Index to protect plaster and equipment from corrosion.</p>
-                </div>
-                <div class="card">
-                    <h3>GREEN-TO-CLEAN</h3>
-                    <p>Scientific recovery of neglected pools using precise chemical dosing and filtration management.</p>
-                </div>
+            <h2>TARGET PARAMETERS</h2>
+            <div class="element-grid">
+                <div class="element"><span>pH</span></div>
+                <div class="element"><span>TA</span></div>
+                <div class="element"><span>CYA</span></div>
+                <div class="element"><span>TC</span></div>
+                <div class="element"><span>FC</span></div>
+                <div class="element"><span>TDS</span></div>
             </div>
         </div>
     </section>
@@ -48,11 +49,11 @@
     <footer>
         <div class="container">
             <h3>Calibrated Pools</h3>
-            <p>Certified Pool & Spa Operator</p>
+            <p style="color: #00e5ff;">(860) 381-7255</p>
             <p class="contact-info">
                 <a href="mailto:joshua@calibratedpools.com">joshua@calibratedpools.com</a> 
             </p>
-            <p class="small-text">&copy; 2026 Calibrated Pools. PHTA Standards Compliant.</p>
+            <p class="small-text">&copy; 2026 Calibrated Pools. All Rights Reserved.</p>
         </div>
     </footer>
 
