--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 <body>
 
     <nav>
-        <div class="logo-text">
-            CALIBRATED <span class="silver-text">POOLS</span>
+        <div class="logo-container">
+            <div class="water-drop">
+                <div class="crosshair-v"></div>
+                <div class="crosshair-h"></div>
+            </div>
+            
+            <div class="logo-text">
+                CALIBRATED <span class="silver-text">POOLS</span>
+            </div>
         </div>
+        
         <a href="mailto:joshua@calibratedpools.com" class="nav-btn">CONTACT TECH</a>
     </nav>
 
