--- a/index.html
+++ b/index.html
@@ -45,71 +45,85 @@
             <p class="instruction-text">(HOVER TO REVEAL STANDARDS)</p>
             
             <div class="element-grid">
-                <div class="element">
-                    <div class="front">
-                        <span class="symbol">pH</span>
-                        <span class="name">Acidity / Basicity</span>
-                    </div>
-                    <div class="back">
-                        <span class="range-label">IDEAL RANGE</span>
-                        <span class="range-value">7.4 – 7.6</span>
-                    </div>
-                </div>
-
-                <div class="element">
-                    <div class="front">
-                        <span class="symbol">TA</span>
-                        <span class="name">Total Alkalinity</span>
-                    </div>
-                    <div class="back">
-                        <span class="range-label">IDEAL RANGE</span>
-                        <span class="range-value">80 – 120 <small>ppm</small></span>
+                
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <span class="symbol">pH</span>
+                            <span class="name">Acidity</span>
+                        </div>
+                        <div class="flip-card-back">
+                            <span class="range-label">IDEAL RANGE</span>
+                            <span class="range-value">7.4 – 7.6</span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="element">
-                    <div class="front">
-                        <span class="symbol">CH</span>
-                        <span class="name">Calcium Hardness</span>
-                    </div>
-                    <div class="back">
-                        <span class="range-label">IDEAL RANGE</span>
-                        <span class="range-value">200 – 400 <small>ppm</small></span>
-                    </div>
-                </div>
-
-                <div class="element">
-                    <div class="front">
-                        <span class="symbol">CYA</span>
-                        <span class="name">Stabilizer</span>
-                    </div>
-                    <div class="back">
-                        <span class="range-label">IDEAL RANGE</span>
-                        <span class="range-value">30 – 50 <small>ppm</small></span>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <span class="symbol">TA</span>
+                            <span class="name">Alkalinity</span>
+                        </div>
+                        <div class="flip-card-back">
+                            <span class="range-label">IDEAL RANGE</span>
+                            <span class="range-value">80 – 120 <small>ppm</small></span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="element">
-                    <div class="front">
-                        <span class="symbol">FC</span>
-                        <span class="name">Free Chlorine</span>
-                    </div>
-                    <div class="back">
-                        <span class="range-label">IDEAL RANGE</span>
-                        <span class="range-value">2.0 – 4.0 <small>ppm</small></span>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <span class="symbol">CH</span>
+                            <span class="name">Calcium</span>
+                        </div>
+                        <div class="flip-card-back">
+                            <span class="range-label">IDEAL RANGE</span>
+                            <span class="range-value">200 – 400 <small>ppm</small></span>
+                        </div>
                     </div>
                 </div>
 
-                 <div class="element">
-                    <div class="front">
-                        <span class="symbol">LSI</span>
-                        <span class="name">Saturation Index</span>
-                    </div>
-                    <div class="back">
-                        <span class="range-label">IDEAL RANGE</span>
-                        <span class="range-value">-0.3 to +0.3</span>
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <span class="symbol">CYA</span>
+                            <span class="name">Stabilizer</span>
+                        </div>
+                        <div class="flip-card-back">
+                            <span class="range-label">IDEAL RANGE</span>
+                            <span class="range-value">30 – 50 <small>ppm</small></span>
+                        </div>
                     </div>
                 </div>
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <span class="symbol">FC</span>
+                            <span class="name">Free Chlorine</span>
+                        </div>
+                        <div class="flip-card-back">
+                            <span class="range-label">IDEAL RANGE</span>
+                            <span class="range-value">2.0 – 4.0 <small>ppm</small></span>
+                        </div>
+                    </div>
+                </div>
+
+                 <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <span class="symbol">LSI</span>
+                            <span class="name">Sat. Index</span>
+                        </div>
+                        <div class="flip-card-back">
+                            <span class="range-label">IDEAL RANGE</span>
+                            <span class="range-value">-0.3 to +0.3</span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
