--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calibrated Pools | Residential & Commercial Services</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💧</text></svg>">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -18,9 +19,7 @@
                 CALIBRATED <span class="silver-text">POOLS</span>
             </div>
         </div>
-        
-        <a href="mailto:joshua@calibratedpools.com" class="nav-btn">CONTACT TECH</a>
-    </nav>
+        </nav>
 
     <header class="hero">
         <div class="glass-panel">
