--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             display: flex;
             align-items: center;
             padding: 40px 0;
-            justify-content: center; /* Centered Logo */
+            justify-content: center;
         }
 
         .logo-container {
@@ -121,7 +121,6 @@
         .science-box h3 { color: var(--primary); margin-top: 0; }
 
         /* --- PRICING SECTION --- */
-        /* Flex container for the top two cards */
         .plans-container {
             display: flex;
             flex-wrap: wrap;
@@ -130,7 +129,6 @@
             margin-bottom: 30px;
         }
 
-        /* Container for the single centered repair card */
         .repair-container {
             display: flex;
             justify-content: center;
@@ -146,7 +144,7 @@
             padding: 40px;
             transition: all 0.4s ease;
             position: relative;
-            flex: 1 1 350px; /* Responsive flex basis */
+            flex: 1 1 350px;
             max-width: 500px;
         }
 
@@ -205,13 +203,13 @@
         /* --- GALLERY --- */
         .gallery-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Made slightly larger for detail */
             gap: 20px;
             margin-top: 40px;
         }
 
         .gallery-item {
-            height: 250px;
+            height: 300px; /* Taller to show off the sand filter detail */
             border-radius: 16px;
             overflow: hidden;
             border: 1px solid var(--glass-border);
@@ -226,6 +224,25 @@
         }
 
         .gallery-item:hover img { transform: scale(1.1); }
+        
+        /* Caption on hover */
+        .gallery-item::after {
+            content: attr(data-label);
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background: rgba(0,0,0,0.6);
+            color: white;
+            padding: 10px;
+            text-align: center;
+            transform: translateY(100%);
+            transition: transform 0.3s;
+        }
+        
+        .gallery-item:hover::after {
+            transform: translateY(0);
+        }
 
         /* --- SERVICE AREA --- */
         .service-area {
@@ -380,10 +397,15 @@
 
         <h2 class="section-title">Deployed Projects</h2>
         <div class="gallery-grid">
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1562778612-e1e0cda9915c?auto=format&fit=crop&q=80" alt="Work 1"></div>
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1497436072909-60f360e1d4b0?auto=format&fit=crop&q=80" alt="Work 2"></div>
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&q=80" alt="Work 3"></div>
-            <div class="gallery-item"><img src="https://images.unsplash.com/photo-1517400508447-f8dd518b86db?auto=format&fit=crop&q=80" alt="Work 4"></div>
+            <div class="gallery-item" data-label="Precision Spa Balancing">
+                <img src="project1.jpg" alt="Spa Calibration">
+            </div>
+            <div class="gallery-item" data-label="Heavy Media Changes (TR-140)">
+                <img src="project2.jpg" alt="Sand Filter Internal">
+            </div>
+            <div class="gallery-item" data-label="LSI Calibrated Clarity">
+                <img src="project3.jpg" alt="Pool Clarity">
+            </div>
         </div>
 
         <div class="service-area">
