--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
         /* --- GALLERY --- */
         .gallery-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Made slightly larger for detail */
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
             margin-top: 40px;
         }
 
         .gallery-item {
-            height: 300px; /* Taller to show off the sand filter detail */
+            height: 300px;
             border-radius: 16px;
             overflow: hidden;
             border: 1px solid var(--glass-border);
@@ -330,7 +330,7 @@
                     <line x1="50" y1="40" x2="50" y2="100" stroke="white" stroke-width="4"/>
                     <line x1="20" y1="70" x2="80" y2="70" stroke="white" stroke-width="4"/>
                 </svg>
-                <div class="logo-text">Calibrated</div>
+                <div class="logo-text">Calibrated Pools</div>
             </div>
         </nav>
 
@@ -431,7 +431,7 @@
                 <span style="opacity: 0.8; margin-right: 15px;">&copy; 2026 Calibrated Pools</span>
                 <span style="opacity: 0.6; font-size: 0.8rem;">CPO #C-161853</span>
             </div>
-            <a href="#" class="portal-link">Technician Portal Login</a>
+            <a href="login.html" class="portal-link">Technician Portal Login</a>
         </footer>
 
     </div>
