--- a/index.html
+++ b/index.html
@@ -250,7 +250,6 @@
             position: relative;
         }
 
-        /* This is the "Night Vision" Filter */
         .map-frame {
             width: 100%;
             height: 100%;
@@ -494,8 +493,8 @@
             <div>
                 <h3 style="color: var(--primary); margin: 0 0 10px 0; text-transform: uppercase; letter-spacing: 2px;">Future Protocol: Remote Telemetry</h3>
                 <p style="margin: 0; color: var(--text-muted); font-size: 0.95rem;">
-                    In Development: 24/7 Digital Monitoring integration. Real-time pH & Flow Rate data directly to our tech portal.
-                    <br><span style="font-size: 0.8rem; opacity: 0.7;">(Powered by WaterGuru & Aiper Technology)</span>
+                    In Development: 24/7 Remote Water Chemistry Analysis. Real-time chemical metrics sent directly to our tech portal for WiFi-enabled residential pools.
+                    <br><span style="font-size: 0.8rem; opacity: 0.7;">(Powered by Aiper HydroComm Technology)</span>
                 </p>
             </div>
             <div style="background: rgba(0,210,255,0.1); border: 1px solid var(--primary); padding: 8px 16px; border-radius: 4px; font-family: monospace; font-weight: bold; color: var(--primary);">
@@ -510,7 +509,7 @@
             <div class="map-container">
                 <iframe 
                     class="map-frame"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d222212.91572076062!2d-95.3400!3d29.5070!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864098933b49e1e3%3A0xc3c545041a313620!2sWebster%2C%20TX!5e0!3m2!1sen!2sus!4v1700000000000!5m2!1sen!2sus" 
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d111005.13788755024!2d-95.11667104999999!3d29.5375549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1705500000000!5m2!1sen!2sus" 
                     allowfullscreen="" 
                     loading="lazy">
                 </iframe>
@@ -533,7 +532,7 @@
 
         <footer>
             <div>
-                <span style="opacity: 0.8; margin-right: 15px;">&copy; 2026 Calibrated Pools</span>
+                <span style="opacity: 0.8; margin-right: 15px;">© 2026 Calibrated Pools</span>
                 <span style="opacity: 0.6; font-size: 0.8rem;">CPO #C-161853</span>
             </div>
             <a href="login.html" class="portal-link">Technician Portal Login</a>
