--- a/index.html
+++ b/index.html
@@ -491,9 +491,9 @@
 
         <div class="coming-soon-card">
             <div>
-                <h3 style="color: var(--primary); margin: 0 0 10px 0; text-transform: uppercase; letter-spacing: 2px;">Future Protocol: Remote Telemetry</h3>
+                <h3 style="color: var(--primary); margin: 0 0 10px 0; text-transform: uppercase; letter-spacing: 2px;">Future Protocol: Residential Telemetry</h3>
                 <p style="margin: 0; color: var(--text-muted); font-size: 0.95rem;">
-                    In Development: 24/7 Remote Water Chemistry Analysis. Real-time chemical metrics sent directly to our tech portal for WiFi-enabled residential pools.
+                    In Development: 24/7 Remote Water Chemistry Analysis for WiFi-enabled residential pools. 
                     <br><span style="font-size: 0.8rem; opacity: 0.7;">(Powered by Aiper HydroComm Technology)</span>
                 </p>
             </div>
@@ -509,7 +509,7 @@
             <div class="map-container">
                 <iframe 
                     class="map-frame"
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d111005.13788755024!2d-95.11667104999999!3d29.5375549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1705500000000!5m2!1sen!2sus" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d111166.45876523916!2d-95.21557088114624!3d29.539825316503816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86409b0682245237%3A0xc3b5e406f5276e0a!2sWebster%2C%20TX!5e0!3m2!1sen!2sus!4v1705976523425!5m2!1sen!2sus" 
                     allowfullscreen="" 
                     loading="lazy">
                 </iframe>
