--- a/index.html
+++ b/index.html
@@ -431,14 +431,15 @@
         <div class="repair-container">
             <div class="glass-card" style="width: 100%; max-width: 600px;">
                 <div class="level-badge" style="background: transparent; border: 1px solid white; color: white;">Repairs</div>
-                <h2>Systems & Repair</h2>
+                <h2>Systems & Thermal Defense</h2>
                 <div class="card-price" style="font-size: 1.8rem;">Custom Quote</div>
-                <p style="color: var(--text-muted); font-size: 0.9rem;">Expert diagnostics for complex issues.</p>
+                <p style="color: var(--text-muted); font-size: 0.9rem;">Expert diagnostics and Northern-standard winterization.</p>
                 <ul class="features" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 10px;">
-                    <li>Sand Filter Media Changes</li>
                     <li>Diagnostic Service Calls ($125)</li>
                     <li>Filter Grid/Cartridge Restoration</li>
-                    <li><strong>Green-to-Clean Restoration</strong></li>
+                    <li>Sand Filter Media Changes</li>
+                    <li><strong>Thermal Pipe Shielding</strong> (No Tape)</li>
+                    <li>Green-to-Clean Restoration</li>
                     <li>Commercial Facility Consults</li>
                 </ul>
             </div>
@@ -447,6 +448,13 @@
         <div class="science-box" style="margin-top: 100px; text-align: left;">
             <h3 style="text-align: center; margin-bottom: 30px;">Protocol Knowledge Base</h3>
             
+            <div class="faq-item">
+                <details>
+                    <summary>How do you handle Freeze Protection?</summary>
+                    <p>We do not use duct tape or zip ties. Leveraging <strong>Northern industrial standards</strong>, we install sealed, thermal-grade insulation (Armaflex) that withstands hard freezes. This isn't just wrapping; it is thermal shielding to protect your PVC and valves.</p>
+                </details>
+            </div>
+
             <div class="faq-item">
                 <details>
                     <summary>Do you offer Green-to-Clean services?</summary>
@@ -458,13 +466,6 @@
                 <details>
                     <summary>Is there a long-term service contract?</summary>
                     <p>No. We operate on a month-to-month performance basis. We believe retention should be earned through water quality, not binding paperwork.</p>
-                </details>
-            </div>
-
-            <div class="faq-item">
-                <details>
-                    <summary>Does 'Chemical Analysis' cover specialty chemicals?</summary>
-                    <p>Level 1 and Level 2 plans cover all standard maintenance chemicals. Specialty treatments for phosphate removal or severe algae remediation are quoted as separate "Correctional Protocols."</p>
                 </details>
             </div>
 
@@ -493,8 +494,8 @@
             <div>
                 <h3 style="color: var(--primary); margin: 0 0 10px 0; text-transform: uppercase; letter-spacing: 2px;">Future Protocol: Residential Telemetry</h3>
                 <p style="margin: 0; color: var(--text-muted); font-size: 0.95rem;">
-                    In Development: 24/7 Remote Water Chemistry Analysis for WiFi-enabled residential pools. 
-                    <br><span style="font-size: 0.8rem; opacity: 0.7;">(Powered by Aiper HydroComm Technology)</span>
+                    In Development: Solar-Powered, 24/7 Remote Water Chemistry Analysis for WiFi-enabled residential pools. 
+                    <br><span style="font-size: 0.8rem; opacity: 0.7;">(Powered by Aiper HydroComm Technology • Non-Commercial Logs)</span>
                 </p>
             </div>
             <div style="background: rgba(0,210,255,0.1); border: 1px solid var(--primary); padding: 8px 16px; border-radius: 4px; font-family: monospace; font-weight: bold; color: var(--primary);">
@@ -509,7 +510,7 @@
             <div class="map-container">
                 <iframe 
                     class="map-frame"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d111166.45876523916!2d-95.21557088114624!3d29.539825316503816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86409b0682245237%3A0xc3b5e406f5276e0a!2sWebster%2C%20TX!5e0!3m2!1sen!2sus!4v1705976523425!5m2!1sen!2sus" 
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d111005.13788755024!2d-95.11667104999999!3d29.5375549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1705500000000!5m2!1sen!2sus" 
                     allowfullscreen="" 
                     loading="lazy">
                 </iframe>
