--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calibrated Pools | Clarity with Science</title>
+    <title>Calibrated Pools | Technical Water Chemistry</title>
     
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><path d='M50 0 C20 40 10 50 10 70 C10 92 28 110 50 110 C72 110 90 92 90 70 C90 50 80 40 50 0' fill='%2300d2ff'/><circle cx='50' cy='70' r='30' stroke='white' stroke-width='4' fill='none'/><line x1='50' y1='40' x2='50' y2='100' stroke='white' stroke-width='4'/><line x1='20' y1='70' x2='80' y2='70' stroke='white' stroke-width='4'/></svg>">
 
@@ -386,6 +386,9 @@
         <div class="hero">
             <h1>Clarity with Science</h1>
             <div class="subtitle">Precision Pool Care for Southeastern Texas</div>
+            <div style="margin-top:30px; display:inline-block; border:1px solid var(--primary); color:var(--primary); padding:8px 20px; border-radius:30px; font-size:0.9rem; letter-spacing:1px; font-weight:600;">
+                ACCEPTING WAITLIST FOR SPRING 2026
+            </div>
         </div>
 
         <div class="science-box">
@@ -528,15 +531,15 @@
         </div>
 
         <div class="cta-container">
-            <a href="mailto:joshua@calibratedpools.com" class="btn-primary">Initiate Service Request</a>
+            <a href="mailto:info@calibratedpools.com" class="btn-primary">Request Waitlist Access</a>
         </div>
 
         <footer>
             <div>
                 <span style="opacity: 0.8; margin-right: 15px;">© 2026 Calibrated Pools</span>
-                <span style="opacity: 0.6; font-size: 0.8rem;">CPO #C-161853</span>
+                <span style="opacity: 0.6; font-size: 0.8rem;">Certified Pool Operator</span>
             </div>
-            <a href="login.html" class="portal-link">Technician Portal Login</a>
+            <span style="opacity: 0.4;">Technician Access Only</span>
         </footer>
 
     </div>
